fix Hard skils title

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
          </div>
          <div class="main__hardskils main__content">
-            <h2 class="hardskils__title">Hard skils;</h2>
+            <h2 class="hardskils__title">Hard skils</h2>
             <ul class="hardskils__list subtittle">
                <li class="shardkils__item">HTML and CSS;</li>
                <li class="shardkils__item">JavaScript;</li>
