fix: rename tittles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
          </div>
          <div class="main__softskils main__content">
-            <h2 class="softskils__title">Soft skils</h2>
+            <h2 class="softskils__title">Soft skills</h2>
             <ul class="softskils__list subtittle">
                <li class="softskils__item">Communication: Advanced;</li>
                <li class="softskils__item">Problem-solving: Advanced;</li>
@@ -51,7 +51,7 @@
             </ul>
          </div>
          <div class="main__hardskils main__content">
-            <h2 class="hardskils__title">Hard skils</h2>
+            <h2 class="hardskils__title">Hard skills</h2>
             <ul class="hardskils__list subtittle">
                <li class="shardkils__item">HTML and CSS;</li>
                <li class="shardkils__item">JavaScript;</li>
